crates/playwright-rs-macros/tests/ui/unclosed_bracket.stderr
error: unclosed `[`
 --> tests/ui/unclosed_bracket.rs:4:22
  |
4 |     let _ = locator!("button[disabled");
  |                      ^^^^^^^^^^^^^^^^^
